<resources>
    <string name="app_name">ProjectX</string>
    <string name="title_activity_maps">Map</string>
    <string name="mesanizi_giriniz">Mesajınızı giriniz.</string>
    <string name="title_activity_first">FirstActivity</string>

    <string name="loginUsername">Kullanıcı Adı</string>
    <string name="loginPassword">Şifre</string>



    <string name="registerFirstName">İsim</string>
    <string name="registerLastName">Soyisim</string>
    <string name="registerUserName">Username</string>
    <string name="registerEmail">E-mail</string>

    <string name="registerPassword">Password</string>
    <string name="registerButton">Kayıt ol</string>

    <string name="email">E-mail</string>

    <string name="giris">Giris Yap</string>
    <string name="kayit">Kayıt Ol</string>
    <string name="exit">Çıkmak için tekrar basınız.</string>
    <string name="rememberMe">Beni Hatırla</string>

</resources>
