<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">


    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="529dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@string/registerFirstName"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/registerFirstName"
                android:inputType="textPersonName"

                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="44dp" />

            <EditText
                android:id="@string/registerLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"

                android:ems="10"
                android:hint="@string/registerLastName"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="45dp" />

        </LinearLayout>

        <EditText
            android:id="@string/registerUserName"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/registerUserName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="204dp" />

        <EditText
            android:id="@string/registerEmail"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="143dp" />

        <EditText
            android:id="@string/registerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/registerPassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@string/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@string/registerButton"
            android:layout_width="122dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="204dp"
            android:text="@string/registerButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>